--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
   }
   html {
     scroll-behavior: smooth;
+    -webkit-tap-highlight-color: transparent;
   }
   body {
     font-family: 'IBM Plex Sans', sans-serif;
