--- a/styles.css
+++ b/styles.css
@@ -465,10 +465,6 @@
     .project-overlay {
       font-size: 1rem;
     }
-
-    .footer-legal {
-      font-size: 8px;
-    }
   }
 
   @media (max-width: 768px) {
@@ -793,6 +789,12 @@
   color: #fff;
 }
 
+@media (max-width: 1024px) {
+  .footer-legal {
+    font-size: 8px;
+  }
+}
+
 /* Адаптивность */
 @media (max-width: 768px) {
   .footer-top {
@@ -809,7 +811,6 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-      font-size: 8px;
   }
 }
 
