--- a/styles.css
+++ b/styles.css
@@ -173,6 +173,18 @@
     display: block;
     padding-top: 56.25%; /* это 16:9 пропорция */
   }
+
+  .video-section::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4); /* Прозрачность затемнения */
+    z-index: 1; /* Обязательно ниже оверлеев, но выше видео */
+    pointer-events: none; /* Чтобы не мешал кликам */
+  }
   
   .video-bg {
     position: absolute;
